--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: Ryan Miller Professional Portfolio
+description: This is the professional portfolio of Ryan Miller. I am an audio enthusiast interested in Digital Signal Processing, Machine Learning, and Acoustics. Included herein is information about previous experience, education, research, and projects
+github_username: rjmiller927
 
 # Email and twitter are optional:
-email:
+email: rjmiller927@gmail.com
 twitter_username:
 
 # Set this to true to get LaTeX math equation support
-use_math:
+use_math: true
 
 # Add your Google Analytics ID here if you have one and want to use it
 google_analytics:
